--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
       {
         "language": "json",
         "path": "./snippets/package.code-snippets"
+      },
+      {
+        "language": "md",
+        "path": "./snippets/md.code-snippets"
       }
     ]
   }
